deploy/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: stablesvc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: rollout-canary
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: canarysvc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: rollout-canary
  type: ClusterIP
