deploy/ingressgateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rollouts-gateway
  labels:
    app: rollouts-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "vincent.local"
