deploy/vsvc.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-vsvc
spec:
  gateways:
  - rollouts-gateway
  hosts:
  - vincent.local
  http:
  - name: primary
    route:
    - destination:
        host: stablesvc
      weight: 100
    - destination:
        host: canarysvc
      weight: 0
